# ai-video-clipper

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  add_subtitles.py  app.py  main_clipper.ipynb  pyproject.toml  render.yaml  requirements.txt  srt_generator.py  title_generator.py  vercel.json  video-downloader.py  video_splitter.py
all_notebooks/: ai_video_clipper.ipynb  transcriber.py
src/: all_in_one.py  audio_extractor.py
static/: style.css
templates/: index.html
